6th commit. Stable version. Song name is checked for uniqueness before adding or editing. Refactor, usage of sharedPreferences removed for passing song name through intent. Code for sharedPreferences saved as comment in StringHelper just in case. TODO next: (1) get view version page working. (2) get add new version to existing song page working.

--- a/app/src/main/res/layout/activity_add_version.xml
+++ b/app/src/main/res/layout/activity_add_version.xml
@@ -57,11 +57,11 @@
         android:textAllCaps="false" />
 
     <Button
-        android:id="@+id/idBtnBackToHome"
+        android:id="@+id/idBtnBackToAddSong"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Back to Home"
+        android:text="Back to Song"
         android:textAllCaps="false" />
 
 </LinearLayout>
