--- a/app/src/main/res/layout/activity_edit_version.xml
+++ b/app/src/main/res/layout/activity_edit_version.xml
@@ -81,6 +81,14 @@
         android:textAllCaps="false" />
 
     <Button
+        android:id="@+id/idBtnDeleteVersion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="Delete"
+        android:textAllCaps="false" />
+
+    <Button
         android:id="@+id/idBtnBack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
