12th commit. Stable version. Major checkin for style changes! Song list is ordered alphabetically. App icon has been changed! App has many icons for various FAB icons. App has distinct style across most pages. Strings xml file created but only begun to migrate texts here. Style xml file added. Color xml file used. TODO next: (1) finish style in version pages (2) finish strings xml migration of strings

--- a/app/src/main/res/layout/activity_delete_song_or_version.xml
+++ b/app/src/main/res/layout/activity_delete_song_or_version.xml
@@ -1,52 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/screen_background"
     tools:context=".EditSongActivity">
+
+    <ImageView
+        android:id="@+id/lyricistImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/solar_eclipse_image"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/lyricistImage"
+        android:layout_marginTop="14dp"
+        android:gravity="center"
         android:text="Lyricist"
+        android:textColor="@color/highlighted_text"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
 
     <TextView
         android:id="@+id/idTxtSongOrVersionName"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_margin="10dp"
+        android:layout_above="@+id/idTxtWarning"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/song_name"
+        android:textColor="@color/standard_text_dark_grey"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:text="Song Name" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/idTxtWarning"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="center"
+        android:layout_centerVertical="true"
+        android:text="@string/delete_song_warning"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:text="Are you fricken sure you want to delete this?" />
+        android:textStyle="bold" />
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idBtnDelete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Delete"
-        android:textAllCaps="false" />
+        android:layout_width="57dp"
+        android:layout_height="57dp"
+        android:layout_below="@+id/idTxtWarning"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="67dp"
+        android:clickable="true"
+        android:scaleType="center"
+        app:fabCustomSize="57dp"
+        app:maxImageSize="38dp"
+        app:srcCompat="@drawable/delete_explosion_icon" />
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idBtnBackToSongAndVersions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Back"
-        android:textAllCaps="false" />
+        android:layout_width="57dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="19dp"
+        android:clickable="true"
+        android:scaleType="center"
+        app:maxImageSize="32dp"
+        app:srcCompat="@drawable/back_arrow_icon"
+        app:backgroundTint="@color/back_button"/>
 
-</LinearLayout>
+</RelativeLayout>
