--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <!-- Top header bar -->
     <color name="colorPrimaryDark">#000000</color>
     <!-- Toast colours -->
-    <color name="color_toast">#fc6909</color>
+    <color name="color_toast">#FFA21F</color>
     <color name="color_toast_text">#000000</color>
 
     <color name="back_button">#747875</color>
@@ -13,6 +13,7 @@
     <color name="standard_text_grey">#2A000000</color>
     <color name="standard_text_dark_grey">#747875</color>
     <color name="standard_text_dark">#000000</color>
-    <color name="highlighted_text">#fc6909</color>
+    <color name="highlighted_text_yellow">#FFA21F</color>
+    <color name="highlighted_text_orange">#fc6909</color>
     <color name="list_item_background_shade">#2A000000</color>
 </resources>
