--- a/app/src/main/res/layout/activity_delete_song_or_version.xml
+++ b/app/src/main/res/layout/activity_delete_song_or_version.xml
@@ -26,8 +26,8 @@
         android:layout_below="@+id/lyricistImage"
         android:layout_marginTop="14dp"
         android:gravity="center"
-        android:text="Lyricist"
-        android:textColor="@color/highlighted_text"
+        android:text="@string/app_name"
+        android:textColor="@color/highlighted_text_orange"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
@@ -41,7 +41,7 @@
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="@string/song_name"
-        android:textColor="@color/standard_text_dark_grey"
+        android:textColor="@color/highlighted_text_yellow"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -67,6 +67,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="67dp"
         android:clickable="true"
+        android:contentDescription="@string/delete"
         android:scaleType="center"
         app:fabCustomSize="57dp"
         app:maxImageSize="38dp"
@@ -79,6 +80,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="19dp"
         android:clickable="true"
+        android:contentDescription="@string/back"
         android:scaleType="center"
         app:maxImageSize="32dp"
         app:srcCompat="@drawable/back_arrow_icon"
