--- a/app/src/main/res/layout/activity_edit_song.xml
+++ b/app/src/main/res/layout/activity_edit_song.xml
@@ -26,8 +26,8 @@
         android:layout_below="@+id/lyricistImage"
         android:layout_marginTop="14dp"
         android:gravity="center"
-        android:text="Lyricist"
-        android:textColor="@color/highlighted_text"
+        android:text="@string/app_name"
+        android:textColor="@color/highlighted_text_orange"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
@@ -41,12 +41,10 @@
         android:background="@drawable/edittext_shape"
         android:layout_centerVertical="true"
         android:textStyle="bold"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/highlighted_text_yellow"
         android:gravity="center"
         android:hint="@string/edit_song_name"
-        android:textColorHint="@color/colorAccent"
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp" />
+        android:textColorHint="@color/standard_text_dark_grey" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idBtnSave"
@@ -56,6 +54,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="19dp"
         android:clickable="true"
+        android:contentDescription="@string/save"
         app:backgroundTint="@color/back_button"
         app:fabCustomSize="57dp"
         android:scaleType="center"
@@ -71,6 +70,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="20dp"
         android:clickable="true"
+        android:contentDescription="@string/delete"
         app:fabCustomSize="57dp"
         android:scaleType="center"
         app:maxImageSize="38dp"
@@ -83,6 +83,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="19dp"
         android:clickable="true"
+        android:contentDescription="@string/back"
         android:scaleType="center"
         app:maxImageSize="32dp"
         app:srcCompat="@drawable/back_arrow_icon"
