--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
         android:layout_below="@+id/lyricistImage"
         android:layout_marginTop="14dp"
         android:gravity="center"
-        android:text="Lyricist"
-        android:textColor="@color/highlighted_text"
+        android:text="@string/app_name"
+        android:textColor="@color/highlighted_text_orange"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
@@ -50,6 +50,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="20dp"
         android:clickable="true"
+        android:contentDescription="@string/add_new_song"
         app:fabCustomSize="57dp"
         android:scaleType="center"
         app:maxImageSize="45dp"
