--- a/app/src/main/res/layout/activity_view_song_and_versions.xml
+++ b/app/src/main/res/layout/activity_view_song_and_versions.xml
@@ -26,8 +26,8 @@
         android:layout_below="@+id/lyricistImage"
         android:layout_marginTop="14dp"
         android:gravity="center"
-        android:text="Song Name"
-        android:textColor="@color/highlighted_text"
+        android:text="@string/song_name"
+        android:textColor="@color/highlighted_text_yellow"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
@@ -50,6 +50,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="20dp"
         android:clickable="true"
+        android:contentDescription="@string/add_new_version"
         app:fabCustomSize="57dp"
         android:scaleType="center"
         app:maxImageSize="45dp"
@@ -64,6 +65,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:contentDescription="@string/edit"
         app:fabCustomSize="59dp"
         app:maxImageSize="30dp"
         app:srcCompat="@drawable/edit_icon"
@@ -76,6 +78,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="19dp"
         android:clickable="true"
+        android:contentDescription="@string/back_to_home"
         android:scaleType="center"
         app:maxImageSize="32dp"
         app:srcCompat="@drawable/back_arrow_icon"
