--- a/app/src/main/res/layout/version_rv_item.xml
+++ b/app/src/main/res/layout/version_rv_item.xml
@@ -18,8 +18,8 @@
             android:padding="3dp"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:text="[Version Name]"
-            android:textColor="@color/highlighted_text" />
+            android:text="@string/version_name"
+            android:textColor="@color/highlighted_text_yellow" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:padding="3dp"
-                android:text="[Creation Date]"
+                android:text="@string/creation_date"
                 android:textColor="@color/standard_text_dark_grey" />
 
             <TextView
@@ -43,7 +43,7 @@
                 android:layout_weight="1"
                 android:padding="3dp"
                 android:gravity="end"
-                android:text="[Edit Date]"
+                android:text="@string/modified_date"
                 android:textColor="@color/standard_text_dark_grey" />
 
         </LinearLayout>
