14th commit. Stable version. Search bar on home screen working. TODO next: scrolling on all pages that need it.

--- a/app/src/main/res/layout/activity_add_version.xml
+++ b/app/src/main/res/layout/activity_add_version.xml
@@ -41,7 +41,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginEnd="10dp"
         android:paddingLeft="10dp"
-        android:background="@drawable/edittext_shape"
+        android:background="@drawable/edit_text_shape_orange"
         android:hint="@string/version_name"
         android:textColor="@color/highlighted_text_yellow"
         android:textColorHint="@color/standard_text_dark_grey"
@@ -55,7 +55,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/edittext_shape"
+        android:background="@drawable/edit_text_shape_orange"
         android:hint="@string/version_description"
         android:inputType="textMultiLine"
         android:minLines="2"
@@ -76,7 +76,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/edittext_shape"
+        android:background="@drawable/edit_text_shape_orange"
         android:hint="@string/version_lyrics"
         android:inputType="textMultiLine"
         android:minLines="3"
