--- a/app/src/main/res/layout/activity_edit_version.xml
+++ b/app/src/main/res/layout/activity_edit_version.xml
@@ -53,7 +53,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/edittext_shape"
+        android:background="@drawable/edit_text_shape_orange"
         android:hint="@string/version_name"
         android:paddingLeft="10dp"
         android:textColor="@color/highlighted_text_yellow"
@@ -81,7 +81,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/edittext_shape"
+        android:background="@drawable/edit_text_shape_orange"
         android:hint="@string/version_description"
         android:inputType="textMultiLine"
         android:minLines="2"
@@ -115,7 +115,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/edittext_shape"
+        android:background="@drawable/edit_text_shape_orange"
         android:hint="@string/version_lyrics"
         android:inputType="textMultiLine"
         android:minLines="3"
