--- a/app/src/main/res/drawable/edit_text_shape_grey.xml
+++ b/app/src/main/res/drawable/edit_text_shape_grey.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--  res/drawable/rounded_edittext.xml -->
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     android:padding="10dp">
 
-    <solid android:color="@color/screen_background" />
+    <solid
+        android:color="@color/screen_background" />
 
-    <stroke android:width="1dip" android:color="@color/colorAccent" />
+    <stroke
+        android:width="1dip"
+        android:color="@color/color_accent_dark_grey" />
 
     <corners
         android:bottomRightRadius="15dp"
