--- a/app/src/main/res/layout/activity_edit_song.xml
+++ b/app/src/main/res/layout/activity_edit_song.xml
@@ -38,7 +38,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/edittext_shape"
+        android:background="@drawable/edit_text_shape_orange"
         android:layout_centerVertical="true"
         android:textStyle="bold"
         android:textColor="@color/highlighted_text_yellow"
